# Ogaranya-Chatbot

./: README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: chat_routes.py
backend/app/ml/: load_model.py
backend/app/schemas/: chat.py
backend/app/utils/: ingest.py  scraper.py
backend/chroma_db/: chroma.sqlite3
backend/data/: formatted_knowledge_base.txt  ogaranya_knowledge_base.txt
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
